# host-camera-server

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  host_camera_server.cc
host_camera_service/: CMakeLists.txt  camera_client.cc  host_camera_server.cc
include/libvhal/: android_audio_core.h  istream_socket_client.h  sensor_interface.h  video_sink.h  vsock_stream_socket_client.h
source/: CMakeLists.txt  video_sink.cc  video_sink_impl.h  vsock_stream_socket_client.cc  vsock_stream_socket_client_impl.h
